# batch_BizInfo

./: .gitignore  create_batch_table.sql  last_updated  pyproject.toml
batch_BizInfo/: main.py  zipcode.py
batch_BizInfo/models/: model.py
