[tool.poetry]
name = "batch-bizinfo"
version = "0.1.0"
description = ""
authors = ["Keunreol Park <ritter4u@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
fs = "^2.4.16"
requests = "^2.31.0"
sqlacodegen-v2 = "^0.1.4"
cryptography = "^42.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
